# GPU-Programming-with-CPP-and-CUDA

./: .gitignore  PROFILING_GUIDE.md  PROFILING_QUICK_REF.md  README.md  cuda_compile.bat
.devcontainer/: DockerfileUbuntu  devcontainer.json
ch10/1_cuBLAS/: CMakeLists.txt  main.cpp
ch10/2_thrust/: CMakeLists.txt  main.cu
ch10/3_gtest/: CMakeLists.txt
ch10/4_pytest/: test_vector_add.py  vector_add.py
ch2/: Dockerfile  readme.md
ch3/: device_query.cu  hello_world  hello_world.cu  readme.md
ch4/1_primes/: CMakeLists.txt  primes.cu
ch4/2_vector_add/: CMakeLists.txt  vector_add.cu
ch4/3_euclidean_distance/: CMakeLists.txt  euclidean_distance.cu  euclidean_distance_profiled.cu
ch4/ex1_primes/: primes.cu
ch4/ex2_scalar_mult/: CMakeLists.txt  scalar_mult.cu
ch4/ex3_vector_operations/: CMakeLists.txt  vector_operations.cu
ch4/ex4_array_operations/: CMakeLists.txt  array_operations.cu
ch5/: readme.md
ch5/1_thread_block_grid/: CMakeLists.txt  thread_hierarchy.cu
ch5/2_launch_configurations/: CMakeLists.txt  launch_configs.cu
ch5/3_async_transfers/: CMakeLists.txt  async_transfers.cu
ch5/4_streams/: CMakeLists.txt  streams.cu
ch6/: readme.md
ch7/: CMakeLists.txt  matrix_multiply_float.cu
exercises/: WARNING_SUPPRESSION_GUIDE.md
exercises/1_image_color_swap/: CMakeLists.txt  COMPLETE_GENERATION_SUMMARY.md  FILE_REORGANIZATION_SUMMARY.md  OUTPUT_ORGANIZATION_UPDATE.md  PROCESSING_SUMMARY.md  PROJECT_SUMMARY.md  RANDOMIZED_PROCESSING_SUMMARY.md  README.md  USAGE.md  color_swap.cu  color_swap_randomized.cu  download_stb.sh
(+30 files in other folders)
